Refactoring: fix mistakes

--- a/exercise-16/src/main/resources/messages_en.properties
+++ b/exercise-16/src/main/resources/messages_en.properties
@@ -18,3 +18,6 @@ delete-button-caption=Delete
 cancel-button-caption=Cancel
 name-field-should-not-be-blank=Title field should not be blank
 name-field-should-has-expected-size=Title field should be between 2 and 10 characters
+author-table-id=ID
+author-table-name=Name
+author-table-header=Authors:
