--- a/exercise-16/src/main/resources/messages_ru.properties
+++ b/exercise-16/src/main/resources/messages_ru.properties
@@ -18,3 +18,6 @@ delete-button-caption=Удалить
 cancel-button-caption=Отменить
 name-field-should-not-be-blank=Название поля не должно быть пустым
 name-field-should-has-expected-size=Название поля должно быть от 2 до 10 символов
+author-table-id=Идентификатор
+author-table-name=Авторы
+author-table-header=Авторы
